chore: fix: expand on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,11 @@
   font-style: normal;
 }
 
+html {
+  position: fixed;
+  height: auto !important;
+}
+
 body {
   font-family: 'QuickZap', sans-serif;
   height: 100%;
